--- a/public/frontend/home/css/style.css
+++ b/public/frontend/home/css/style.css
@@ -1,17 +1,14 @@
-﻿@import url('../../../css');
-
-@import url('../../../css-1');
-@charset "utf-8";
-/** 
-* 
+﻿@charset "utf-8";
+/**
+*
 * -----------------------------------------------------------------------------
 *
 * Template : Educavo - Education HTML Template
 * Author : rs-theme
-* Author URI : http://www.rstheme.com/ 
+* Author URI : http://www.rstheme.com/
 *
 * -----------------------------------------------------------------------------
-* 
+*
 **//* TABLE OF CONTENT
 ---------------------------------------------------------
     01. General CSS
@@ -885,7 +882,7 @@ blockquote p {
 .demo {
     /*-background: repeating-linear-gradient(45deg, #fff 0, #fff 10px,#f9f9f9 10px,#f9f9f9 20px);-*/
 	background: url(https://overseaseducationlane.com/images/p6.png);
-	
+
 }
 .main-timeline{
     position: relative;
@@ -1033,42 +1030,42 @@ blockquote p {
 @media screen and (max-width: 599px) {
   .timeline ol,
   .timeline ol li {
-    width: auto; 
+    width: auto;
   }
-  
+
   .timeline ol {
     padding: 0;
     transform: none !important;
   }
-  
+
   .timeline ol li {
     display: block;
     height: auto;
     background: transparent;
   }
-  
+
   .timeline ol li:first-child {
     margin-top: 25px;
   }
-  
+
   .timeline ol li:not(:first-child) {
     margin-left: auto;
   }
-  
+
   .timeline ol li div {
     width: 94%;
     height: auto !important;
     margin: 0 auto 25px;
   }
-  
+
   .timeline ol li div {
     position: static;
   }
-  
+
   .timeline ol li:nth-child(odd) div {
     transform: none;
   }
-  
+
   .timeline ol li:nth-child(odd) div::before,
   .timeline ol li:nth-child(even) div::before {
     left: 50%;
@@ -1078,7 +1075,7 @@ blockquote p {
     border-left: 1px solid white;
     height: 25px;
   }
-  
+
   .timeline ol li:last-child,
   .timeline ol li:nth-last-child(2) div::before,
   .timeline ol li:not(:last-child)::after,
@@ -1394,7 +1391,7 @@ ul.listing-style.modify li:before {
 .rs-carousel.nav-style2 .owl-nav .owl-prev i:before,
 .rs-carousel.nav-style2 .owl-nav .owl-next i:before {
   font-family: Flaticon;
-  font-size: 30px; 
+  font-size: 30px;
 }
 .rs-carousel.nav-style2 .owl-nav .owl-prev:hover i,
 .rs-carousel.nav-style2 .owl-nav .owl-next:hover i {
@@ -1454,10 +1451,10 @@ ul.listing-style.modify li:before {
 .MultiCarousel .leftLst, .MultiCarousel .rightLst { position:absolute; border-radius:20%;top:calc(50% - 40px); }
 .MultiCarousel .leftLst { left:0; }
 .MultiCarousel .rightLst { right:0; }
-.MultiCarousel .fa { font-size:22px;}    
+.MultiCarousel .fa { font-size:22px;}
 .MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over { pointer-events: none; background:#ccc; }
-		
-		
+
+
 .sec-title .sub-title {
   font-size: 18px;
   line-height: 28px;
@@ -2728,7 +2725,7 @@ ul.listing-style.modify li:before {
 }
 .full-width-header.header-style2 .rs-header .menu-area .rs-menu-area .main-menu .rs-menu ul.sub-menu li a {
   font-weight: 400 !important;
-  color: #ffffff; 
+  color: #ffffff;
 }
 .full-width-header.header-style2 .rs-header .menu-area .rs-menu-area .main-menu .rs-menu ul.sub-menu li a:hover {
   background: #f7f7f7 !important; color:#333;
@@ -6148,7 +6145,7 @@ font-size: smaller; line-height:22px; margin-right:10px; border:1px solid rgb(7,
 .rs-popular-courses.style3 .courses-item .content-part .meta-part li {
   display: inline;
   margin-right: 10px;
-  font-weight: 300; 
+  font-weight: 300;
   border-top: 1px dashed #dcdcdc;
     padding: 3px;
 }
@@ -6179,14 +6176,14 @@ font-size: smaller; line-height:22px; margin-right:10px; border:1px solid rgb(7,
 }
 .rs-popular-courses.style3 .courses-item .content-part .bottom-part .btn-part {
   text-align: right;
-	
+
 }
 .rs-popular-courses.style3 .courses-item .content-part .bottom-part a  {
   background: #3567f1;
 	border-radius: 5px;
-	text-align: center; 
-	color: #fff; 
-	display: block; 
+	text-align: center;
+	color: #fff;
+	display: block;
 	float: right;
 	padding: 2px 8px;
 	max-width: 100%;
@@ -7002,7 +6999,7 @@ font-size: smaller; line-height:22px; margin-right:10px; border:1px solid rgb(7,
   display: inline;
   margin-right: 10px;
 }
-.rs-latest-couses .course-item .course-info .meta-part li .price { font-weight:bold;} 
+.rs-latest-couses .course-item .course-info .meta-part li .price { font-weight:bold;}
 .rs-latest-couses .course-item .course-info .course-title {
   font-size: 22px;
   line-height: 36px;
@@ -13875,16 +13872,16 @@ box-shadow: 0 0 30px #eee;}
     font-size: 13px;
     margin-top: 10px;
     position: relative;}
-	
-.exp-header .dis i	{     
+
+.exp-header .dis i	{
 	position: absolute;
     bottom: -16px;
     left: 33px;
     color: #DACAF4;
     font-size: 25px;}
-	
-.exp-header	.exp-img .pic { height:76px; width:76px; border-radius:50%; border:2px solid #21a7d0;} 
-.exp-header	.exp-dis {     display: inline-block; vertical-align: middle; margin-left:10px;} 
+
+.exp-header	.exp-img .pic { height:76px; width:76px; border-radius:50%; border:2px solid #21a7d0;}
+.exp-header	.exp-dis {     display: inline-block; vertical-align: middle; margin-left:10px;}
 
 
 .search-sec-result td a { width: 110px;}
@@ -14797,7 +14794,7 @@ box-shadow: 0 0 30px #eee;}
     flex: 0 0 20%;
     max-width: 20%;
 }
-.values .subject-wrap { padding: 30px 10px 25px !important;} 
+.values .subject-wrap { padding: 30px 10px 25px !important;}
 /* -----------------------
     38. Scroll Up CSS
 --------------------------*/
